[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-downloader"
dynamic = ["version"]
description = "A simple desktop YouTube/media downloader built with customtkinter and yt-dlp."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "infinitel8p" }]
dependencies = [
    "customtkinter>=5.2,<6",
    "yt-dlp>=2024.1",
    "Pillow>=10",
    "requests>=2.31",
    "ffmpeg-python>=0.2",
    "packaging>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.9",
    "pyinstaller>=6",
]

[project.gui-scripts]
yt-downloader = "yt_downloader.__main__:main"

[tool.hatch.version]
path = "src/yt_downloader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_downloader"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
