[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-downloader"
dynamic = ["version"]
description = "A simple desktop YouTube/media downloader built with pywebview and yt-dlp."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "infinitel8p" }]
dependencies = [
    "pywebview>=5",
    "yt-dlp>=2024.1",
    "requests>=2.31",
    "packaging>=23",
    # platform webview backends
    "pyobjc-framework-WebKit>=10; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
    "pythonnet>=3; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.9",
    "pyinstaller>=6",
    "pre-commit>=3",
]

[project.gui-scripts]
yt-downloader = "yt_downloader.__main__:main"

[tool.hatch.version]
path = "src/yt_downloader/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_downloader"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
